python-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 1  # You can specify the number of replicas here
  serviceName: python-svc
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: navabnaeem/python-users-data:v1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-svc
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    nodePort: 32000
    targetPort: 5000
  selector:
    app: python-app
